code claenup